examples/test/testpolicy1431.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1431
  namespace: namespace326
spec:
  podSelector:
    matchLabels:
      key11: value39
      key31: value19
      key6: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value16
      podSelector:
        matchLabels:
          key5: value0
          key27: value32
          key29: value23
